@@ -1,3 +1,9 @@
+2012-06-22  Reinhard Max  <max@suse.de>
+
+	* generic/tclIOSock.c: Rework the error message generation of [socket],
+	* unix/tclUnixSock.c:  so that the error code of getaddrinfo is used
+	* win/tclWinSock.c:    instead of errno unless it is EAI_SYSTEM.
+
 2012-06-21  Jan Nijtmans  <nijtmans@users.sf.net>
 
 	* win/tclWinReg.c:          [Bug #3362446]: registry keys command fails
